--- a/src/app/Master/define-restaurant/define-restaurant.component.html
+++ b/src/app/Master/define-restaurant/define-restaurant.component.html
@@ -23,17 +23,17 @@
             </div>
             </div>
              <div class="col-md-4 col-sm-6 col-6"> 
-               <div class="masterTabs dvdefineRestro  active">
+               <div class="masterTabs dvdefineRestro">
                
-                   <img src="assets/images/update-icon.png" />
+                   <img src="assets/images/edit.png" />
                     <p>UPDATE</p> 
                  
                  </div>
                 </div>
                 <div class="col-md-4 col-sm-6 col-6" data-toggle="modal" data-target="#exampleModalLong"> 
-                  <div class="masterTabs dvdefineRestro active">
+                  <div class="masterTabs dvdefineRestro">
                   
-                      <img src="assets/images/updateRestaurant-icon.png" />
+                      <img src="assets/images/update-icon.png" />
                        <p class="restrohead">UPDATE RESTAURANT DETAILS</p> 
                     
                     </div>
