--- a/src/app/pos-sidebar/pos-sidebar.component.html
+++ b/src/app/pos-sidebar/pos-sidebar.component.html
@@ -12,19 +12,20 @@
 
                     <div class="row m-0">
                    <div class="menuList">
-                      <div class="masterTabs active">
-                       
+                      <div class="masterTabs">
+                        <a routerLink="/DefineRestaurant" routerLinkActive="active">
                           <img src="assets/images/defineRestaurant.png" />
                           <span>Define Restaurant</span> 
-                       
+                       </a>
                        </div>
                        </div>
                         <div class="menuList"> 
                           <div class="masterTabs">
-                          
+                            <a routerLink="/SectionTable" routerLinkActive="active">
+                        
                               <img src="assets/images/sectionTable.png" />
                                <span>Section Table</span> 
-                            
+                            </a>
                             </div>
                            </div>
                           </div>
@@ -32,17 +33,18 @@
                           <div class="row m-0">
                             <div class="menuList"> 
                               <div class="masterTabs">
+                                <a routerLink="/SectionTable" routerLinkActive="active">
                                   <img src="assets/images/menuCreation.png" />
                                     <span>Menu Creation</span>
-                                  
+                                  </a>
                                    </div>
                                    </div>
                                     <div class="menuList">
                                        <div class="masterTabs" id="dvdefineempdetails">
-                                       
+                                        <a routerLink="/SectionTable" routerLinkActive="active">
                                           <img src="assets/images/empDetails.png" />
                                               <span>Employee Details</span> 
-                                           
+                                           </a>
                                            </div>
                                            </div>
                                           </div>
