--- a/src/app/pos-sidebar/pos-sidebar.component.css
+++ b/src/app/pos-sidebar/pos-sidebar.component.css
@@ -6,10 +6,11 @@
     margin-right: 5px;
     margin-left: 5px;
     border: 1px solid #cdcdcd;
-    padding: 2px;
     cursor: pointer;
     height:80px;
 }
+.masterTabs a{ display: block;
+    padding: 4px;}
 .menuList{
     width: 50%;
     padding: 0px;
