--- a/src/app/Master/define-restaurant/define-restaurant.component.html
+++ b/src/app/Master/define-restaurant/define-restaurant.component.html
@@ -13,7 +13,7 @@
         </div>
       </div>
     
-      <div class="row boxpos">
+      <div class="row boxpos" style="display:none;">
         <div class="col-md-4 col-sm-6 col-6">
            <div class="masterTabs dvdefineRestro ">
             
@@ -42,13 +42,13 @@
         
 
 
-          
-               <div class="" style="display:none;">
+          <div>
+               <div class="">
                   <div  class="col-md-6 subheading heading"> Sitting Section
 
                   </div>
                 </div>
-               <div class="row mt-1" style="display:none;"> 
+               <div class="row mt-1"> 
                   
                    <div class="col-md-6 col-sm-6 col-6 padding-left">
 
@@ -97,8 +97,12 @@
                         </div>
                        
                        </div>
-        
+                      </div>
 
+
+
+
+<div>
                        <div class="" style="display:none;">
                           <div  class="col-md-6 subheading heading"> Table Creation
         
@@ -158,9 +162,14 @@
                                 </div>
                                
                                </div>
+                              </div>
 
 
 
+
+
+
+<div>
                                <div class="" style="display:none;">
                                   <div  class="col-md-6 subheading heading"> Kitchen Section 
                 
@@ -215,7 +224,10 @@
                                         </div>
                                        
                                        </div>
-        
+                                      </div>
+
+
+
     
                        <div class="card-footer" style="display:none;">
                         <button class="btn btn-sm btn-primary" type="submit"><i class="fa fa-angle-left"></i> Back</button>
