--- a/src/app/Master/menu-creation/menu-creation.component.html
+++ b/src/app/Master/menu-creation/menu-creation.component.html
@@ -290,9 +290,9 @@
        <div class="col-md-12 btnexit">
         <div class="btnCon">
           <button class="btn btn-sm btn-primary btn-main" type="button" ><i class="fa fa-floppy-o pr-1" title="Save"></i></button>
-        <button class="btn btn-sm btn-primary btn-main" type="button" >
+          <a routerLink="/Home" routerLinkActive="active"><button class="btn btn-sm btn-primary btn-main" type="button" >
           <i class="fa fa-sign-out" aria-hidden="true" title="Exit">
-        </i></button>
+        </i></button></a>
       </div>
       </div>
 
