--- a/src/app/pos-sidebar/pos-sidebar.component.html
+++ b/src/app/pos-sidebar/pos-sidebar.component.html
@@ -33,7 +33,7 @@
                           <div class="row m-0">
                             <div class="menuList"> 
                               <div class="masterTabs">
-                                <a routerLink="/SectionTable" routerLinkActive="active">
+                                <a routerLink="/MenuCreation" routerLinkActive="active">
                                   <img src="assets/images/menuCreation.png" />
                                     <span>Menu Creation</span>
                                   </a>
@@ -41,7 +41,7 @@
                                    </div>
                                     <div class="menuList">
                                        <div class="masterTabs" id="dvdefineempdetails">
-                                        <a routerLink="/SectionTable" routerLinkActive="active">
+                                        <a routerLink="/EmployeeDetails" routerLinkActive="active">
                                           <img src="assets/images/empDetails.png" />
                                               <span>Employee Details</span> 
                                            </a>
@@ -52,18 +52,18 @@
                                           <div class="row m-0">
                                             <div class="menuList">
                                                <div class="masterTabs"> 
-                                                
+                                                <a routerLink="/KitchenSection" routerLinkActive="active">
                                                   <img src="assets/images/kitchenSection.png" />
                                                    <span>Kitchen Section</span>
-                                                   
+                                                   </a>
                                                    </div>
                                                    </div> 
                                                    <div class="menuList">
                                                       <div class="masterTabs">
-                                                       
+                                                        <a routerLink="/Addon" routerLinkActive="active">
                                                           <img src="assets/images/addOns.png" />
                                                             <span style="width:100%;">Add-ons</span> 
-                                                         
+                                                         </a>
                                                         </div>
                                                        </div> 
                                                       </div>
