--- a/src/assets/css/POScss.css
+++ b/src/assets/css/POScss.css
@@ -2,7 +2,7 @@
     left: 0;
     width: 74%;
     top: 60px;
-    height: 100%;
+    height: auto;
     margin: 5px 10px;
     background: #fff;}
 .homeContainer .animated{background:#fff !important}
