--- a/src/app/Master/employee-details/employee-details.component.css
+++ b/src/app/Master/employee-details/employee-details.component.css
@@ -1,22 +1,29 @@
-.boxpos{padding: 7px 0px 0px 20px;}
+.boxpos{padding: 0px 0px 0px 20px;width: 100%;}
 .nomarginbtm{margin-bottom:0px !important}
 
 .usercrdbox{border:1px solid #cdcdcd;
     padding: 5px;
+    box-shadow: 2px 2px 6px #908d8d;
 }
 
 .userimage{position: absolute;
     right: 5px;}
 
     .boxwidth{
-        width: 36%;
+        width: 32%;
         position: relative;
+            margin-left: 1%;
+            padding-top: 7px;
     }
+
+
+    .mainLogo{overflow-y: auto;
+        height: 509px;}
     .card-footer {
         padding: .75rem 1.25rem;
      border-top: 1px solid; 
-        background-color: #fff;
-        border-color: #ffffff;
+     background-color: #fff0;
+     border-color: #ffffff00;
         position: absolute;
         bottom: 22px;
         right: 0px;
