--- a/src/app/Master/addon/addon.component.css
+++ b/src/app/Master/addon/addon.component.css
@@ -83,7 +83,7 @@ color:#fff;}
 }
 .btntrash{font-size: 18px;
 padding-top :4px;}
-.boxdiv{    border: 1px solid #d8d8d8;
+.boxdiv{   
     padding: 1%;}
 .search{
     position: absolute;
