--- a/src/app/Master/addon/addon.component.html
+++ b/src/app/Master/addon/addon.component.html
@@ -27,7 +27,7 @@
 
           <div class="col-md-12 boxdiv">
             <div class="row">
-         <div class="col-md-6  ">
+         <div class="col-md-6  pr-0">
           <div class="card ">
             <div class="col-md-12">
             <div class="row mb-2">
@@ -67,7 +67,7 @@
         </div>
 
 
-        <div class="col-md-6  ">
+        <div class="col-md-6 pl-0 ">
           <div class="card ">
             <div class="col-md-12">
             <div class="row ">
