--- a/src/app/Master/employee-details/employee-details.component.html
+++ b/src/app/Master/employee-details/employee-details.component.html
@@ -16,7 +16,7 @@
       <div class="row boxpos">
 
         
-        <div class="boxwidth">
+        <div class="boxwidth" data-toggle="modal" data-target="#exampleModalLong">
           <div class="usercrdbox">
               <img _ngcontent-c5="" src="assets/images/user1.png" class="userimage">
           <div class="form-group row nomarginbtm">
@@ -303,15 +303,78 @@
         
         
     </div>
-    <div class="card-footer">
-        <button class="btn btn-sm btn-primary" type="submit"><i class="fa fa-sign-out"></i>Exit</button>
-      
-    </div>
+  
 
 </div>
+ 
     <div class="clearfix"></div>
 </div>  
 
 </div>
+<div class="card-footer">
+    <button class="btn btn-sm btn-primary" type="submit"><i class="fa fa-sign-out"></i>Exit</button>
+  
+</div>
 </main>
 </div>
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Employee Details</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true" class="closepop">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="" class="form-horizontal ng-untouched ng-pristine ng-valid" enctype="multipart/form-data" method="post" novalidate="">
+                  
+            <div class="form-group row">
+                <label class="col-md-4 col-form-label" for="country code">Employee Code</label>
+                <div class="col-md-8"><input class="form-control form-control-sm" id="text-input" name="country code" placeholder="" type="text" /></div>
+            </div>
+            <div class="form-group row">
+                <label class="col-md-4 col-form-label" for="country name">Name</label>
+                <div class="col-md-8"><input class="form-control form-control-sm" id="email-input" name="country name" placeholder="" type="email" /></div>
+            </div>
+            <div class="form-group row">
+              <label class="col-md-4 col-form-label" for="country name">Mobile</label>
+              <div class="col-md-8"><input class="form-control form-control-sm" id="email-input" name="country name" placeholder="" type="email" /></div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="textarea-input">Email</label>
+            <div class="col-md-8"><input class="form-control form-control-sm" id="email-input" name="country name" placeholder="" type="email" /></div>
+        </div>
+  
+          <div class="form-group row">
+            <label class="col-md-4 col-form-label" for="country name">Kitchen Section Name </label>
+            <div class="col-md-8"><input class="form-control form-control-sm" id="email-input" name="country name" placeholder="" type="email" /></div>
+        </div>
+  
+        <div class="form-group row">
+          <label class="col-md-4 col-form-label" for="country name">Restro Name</label>
+          <div class="col-md-8"><input class="form-control form-control-sm" id="email-input" name="country name" placeholder="" type="email" /></div>
+      </div>
+      <div class="form-group row">
+          <label class="col-md-4 col-form-label" for="country name">User Pin</label>
+          <div class="col-md-8"><input class="form-control form-control-sm" id="email-input" name="country name" placeholder="" type="email" /></div>
+      </div>
+      <div class="form-group row">
+          <label class="col-md-4 col-form-label" for="country name">Role</label>
+          <div class="col-md-8"><input class="form-control form-control-sm" id="email-input" name="country name" placeholder="" type="email" /></div>
+      </div>
+      <div class="form-group row">
+        <label class="col-md-4 col-form-label" for="file-input">Upload Image</label>
+        <div class="col-md-8"><input id="file-input" name="file-input" type="file" /></div>
+    </div>
+          
+        </form>
+    
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Update</button>
+          
+        </div>
+      </div>
+    </div>
+  </div>
