--- a/src/app/Master/running-order/running-order.component.html
+++ b/src/app/Master/running-order/running-order.component.html
@@ -25,7 +25,7 @@
       <div class="col-lg-12  ">
        
 
-          <div class="col-md-12 boxdiv">
+          <div class="col-md-12 boxdiv mt-2">
             <div class="row">
          <div class="col-md-6 p-0 borderright">
               <div class="runningbox">
