--- a/src/app/Master/new-order/new-order.component.html
+++ b/src/app/Master/new-order/new-order.component.html
@@ -13,7 +13,7 @@
         </div>
       </div>
     
-      <div class="row boxpos" style="display:none">
+      <div class="row boxpos" >
         <div class="col-md-6 col-sm-6 col-6">
            <div class="masterTabs dvdefineRestro">
             
@@ -32,21 +32,61 @@
                 </div>
               
                </div>
+               <div class="row" style="display:none">
+               <div class="col-md-12">
+                <div class="selectTable" id="divsittingsection">
+                
         
+                  <div class="sectionBox active headtblbox" >
+                    <h6>Family Section</h6>
+                  </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>Terrace</h6>  
+                    </div>
+                    </div>
+              </div>
 
 
-         
+              <div class="col-md-12">
+                <div class="selectTable">
+                
+        
+                  <div class="sectionBox active headtblbox" >
+                    <h6>T11</h6>
+                  </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T12</h6>  
+                    </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T32</h6>  
+                    </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T22</h6>  
+                    </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T24</h6>  
+                    </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T99</h6>  
+                    </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T48</h6>  
+                    </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T24</h6>  
+                    </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T23</h6>  
+                    </div>
+                    <div class="sectionBox headtblbox" >
+                      <h6>T1</h6>  
+                    </div>
 
 
 
-
-
-
-
-
-
-
-    
+                    </div>
+              </div>
+            </div>
 
 </div>
     <div class="clearfix"></div>
