--- a/src/app/Master/payment/payment.component.html
+++ b/src/app/Master/payment/payment.component.html
@@ -159,8 +159,9 @@
                                   <input type="text" class="form-control" />
                                   <img src="assets/images/cross.png"/>
                                 </div>
-                                    <div class="col-md-12 col-sm-12 col-xs-12 p-0 rightdiv">
-                                        <div class="" id="destinationFields">
+                                <div class="col-md-12 col-sm-12 col-xs-12 rightdiv">
+                                    <div class="row p-0 ">
+                                        <div class="col-md-9 col-sm-9 col-xs-9 p-0 numbers">
                                             <div class="calsi" onclick="btnvalue(9,0);">
                                                 <h6>7</h6>
                                             </div>
@@ -226,10 +227,34 @@
                                                 <h6>OK</h6>
                                             </div>
                                         </div>
+                                        <div class="col-md-3 col-sm-3 col-xs-3 p-0 operators">
+                                            <div class="calsi" onclick="btnvalue(9,0);">
+                                                <h6><img src="assets/images/calci_cross.png" /></h6>
+                                            </div>
+                                            <div class="calsi" onclick="btnvalue(9,0);">
+                                                <h6>*</h6>
+                                            </div>
+                                            <div class="calsi " onclick="btnvalue(8,0);">
 
+                                                <h6>+</h6>
+                                            </div>
+                                            <div class="calsi " onclick="btnvalue(7,0);">
+                                                <h6>-</h6>
+                                            </div>
+                                            <div class="calsi " onclick="btnvalue(6,0);">
+                                                <h6>/</h6>
+                                            </div>
+                                            <div class="calsi " onclick="btnvalue(5,0);">
+
+                                                <h6>5</h6>
+                                            </div>
+                                           
+                                            
+                                        </div>
 
                                     </div>
                                 </div>
+                            </div>
                             </div>
                         </div>
                         <div class="" style="display:none">
@@ -249,6 +274,16 @@
                             <div class="ManagerPrivilege boxpaycolor" id="btnmanagerprivilege">
 
                                 <h6>Manager Privilege</h6>
+                            </div>
+                        </div>
+                        <div class="bottomBtns">
+                           
+                            <div class="Difference boxpaycolor" >
+                                <h6>Cash</h6>
+                            </div>
+                            <div class="ManagerPrivilege boxpaycolor" >
+
+                                <h6>Card</h6>
                             </div>
                         </div>
                     </div>
