--- a/src/app/Master/take-away/take-away.component.html
+++ b/src/app/Master/take-away/take-away.component.html
@@ -1,3 +1,243 @@
-<p>
-  take-away works!
-</p>
+<div class="app-body">
+  
+  <main class="homeContainer">
+
+ 
+  <div class="container-fluid p-0">
+    <div class="card">
+      <div class="card-header">
+        <div class="row">
+          
+        <div class="col-md-2 heading">Take Away</div>
+        <div class="col-md-10">
+          <div class="btnCon">
+         
+            <div class="row">
+
+                <div class="col-md-4">
+                <div class="form-group row">
+                  
+                    <div class="col-md-11"><input class="form-control" id="text-input" name="text-input" placeholder="Menu Search" type="text" /></div>
+                </div>
+              </div>
+
+              <div class="col-md-4 p-0">
+          <div class="form-group row">
+              <label class="col-md-8 col-form-label p-0">Ordered Number:</label>
+              <div class="col-md-4"><p class="form-control-static">2</p></div>
+          </div>
+
+        </div>
+
+        <div class="col-md-4">
+          <div class="form-group row">
+            <label class="col-md-4 col-form-label p-0" for="select3">Menu:</label>
+            <div class="col-md-8">
+                <select class="form-control form-control-sm" id="select3" name="select3">
+                    <option value="0">select</option>
+                    <option value="1">Menu 1</option>
+                    <option value="2">Menu 2</option>
+                    <option value="3">Menu 3</option>
+                </select>
+            </div>
+        </div>
+
+        </div>
+        </div>
+        </div>
+      </div>
+        </div>
+      </div>
+
+    
+
+      <div class="col-lg-12  ">
+       
+
+          <div class="col-md-12 boxdiv mt-2">
+            <div class="row">
+
+                <div class="col-md-6 borderright">
+                   
+                              <div class="card">
+                                <div class="col-md-12 mt-1 p-0">
+                                <ag-grid-angular
+                                style="width: 100%; height: 386px;"
+                                class="ag-theme-alpine"
+                                [rowData]="rowData"
+                                [columnDefs]="columnDefs">
+                            </ag-grid-angular>
+                          </div>
+                              <!-- <span class="noDataMsg">No data Found</span> -->
+                            
+                           </div>
+                           <div class="col-md-12 btnexit">
+                    
+                              <div class="row">
+                                  <div class="col-md-6 p-0">
+                            
+                    
+                            </div>
+                    
+                            <div class="col-md-6 p-0">
+                            <div class="btnCon">
+                                <button class="btn btn-sm btn-primary btn-main btnheight" type="button" >Clear Order</button>
+                                <button class="btn btn-sm btn-primary btn-main btnheight" type="button">Hold</button>
+                              <button class="btn btn-sm btn-primary btn-main btnheight" type="button" >Exit</button>
+                            </div>
+                          </div>
+                          </div>
+                            
+                          </div>
+                          
+                    
+                    
+                    
+                    
+                         
+                    
+                            </div>
+
+
+
+         <div class="col-md-6 p-0" style="display: none;">
+              <div class="runningbox">
+                <div class="ordernocrdbox">
+                  <img src="assets/images/drink.png">
+      </div>
+      <div class="blbspace">
+      <label class="">Beverages</label>
+    </div>
+      
+                  </div>
+
+                  <div class="runningbox">
+                    <div class="ordernocrdbox">
+                      <img src="assets/images/main-course.png">
+          </div>
+          <div class="blbspace">
+          <label class="">Main Course</label>
+        </div>
+          
+                      </div>
+           
+       
+
+        </div>
+
+        <div class="col-md-6 p-0">
+<div>
+            <div class="levelheader">
+                <div class="row">
+                <div class="col-md-6 heading">Second Level</div>
+                </div>
+              </div>
+            <div class="levelbox">
+    <label class="">Hot Drink</label>
+                </div>
+
+                <div class="levelbox">
+        <label class="">Cold Drink</label>
+                    </div>
+                  </div>
+
+
+
+
+                  <div>
+                      <div class="levelheader">
+                          <div class="row">
+                          <div class="col-md-6 heading">Third Level</div>
+                          </div>
+                        </div>
+                      <div class="levelbox">
+              <label class="">Level 3</label>
+                          </div>
+          
+                          <div class="levelbox">
+                  <label class="">Level 3</label>
+                              </div>
+                            </div>
+
+                            <div>
+                                <div class="levelheader">
+                                    <div class="row">
+                                    <div class="col-md-6 heading">Beverages</div>
+                                    </div>
+                                  </div>
+                                <div class="levelbox">
+                        <label class="">
+                            Orange Juice</label>
+                                    </div>
+                    
+                                    <div class="levelbox">
+                            <label class="">Mango Shake</label>
+                                        </div>
+
+                                        <div class="levelbox">
+                                            <label class="">Cold Drink</label>
+                                                        </div>
+                                      </div>
+     
+
+
+
+
+                                      <div class="col-md-12 qtybtmdiv">
+                                       <div class="col-md-12 btnexit">
+                                
+                                          <div class="row">
+                                              <div class="col-md-6 p-0">
+                                                  <div class="form-group row">
+                                                      <label class="col-md-3 col-form-label" for="email-input">Quantity</label>
+                                                      <div class="col-md-9"><span class="qtydiv"><i class="fa fa-minus-circle" aria-hidden="true"></i></span> <span class="lblspan">1</span> <span class="qtydiv"><i class="fa fa-plus-circle" aria-hidden="true"></i></span></div>
+                                                  </div>
+                                
+                                        </div>
+                                
+                                        <div class="col-md-6 p-0">
+                                        <div class="btnCon">
+                                            <button class="btn btn-sm btn-primary btn-main btnheight" type="button" >Back</button>
+                                            
+                                        </div>
+                                      </div>
+                                      </div>
+                                        
+                                      </div>
+                                      
+                                
+                                
+                                
+                                
+                                     
+                                
+                                        </div>
+
+      </div>
+
+
+
+        
+        </div>
+      </div>
+     
+      </div>
+
+
+     
+   
+
+
+</div>
+    <div class="clearfix"></div>
+
+
+</div>
+</main>
+</div>
+
+
+
+
+
+
