--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -5,4 +5,4 @@
 <app-pos-sidebar *ngIf="showPOSNav"></app-pos-sidebar>
 <router-outlet></router-outlet>
 
- <app-footer ></app-footer> 
+ <!-- <app-footer ></app-footer>  -->
